Draft Article Update and Change some Theme Styles
- Draft Article: "Apa itu Cloudflare? Perlukah untuk menggunakan nya?" Update
- Shortcode: Changing how Spoiler Renders
- Theme: Changing Theme Minimal Width for Desktop User in SCSS Breakpoints to 1024px
- Theme: Modify Style for Spoiler Shortcode
- Theme: Add Single Template file for Article and Details
- Theme: Separating Summary and Description (Description in Front Template and Summary in Single Post Template)
- Theme: Add "DescriptionSEO" Front Matter'
- Theme: Not using '.min' while load Fonts CSS in Development Environment
- Theme: Changing "Archives" Icon on Widget
- Theme: Adding "Read More" feature
- Theme: Adding Categories Template on Widget Layout
- Config: Adding Categories in Widgets
- i18n(id): Add Translation String for "Read More" and "Categories Cloud"
- Modify All Published Articles

--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -22,7 +22,7 @@ article:
     lastUpdatedOn:
         other: Terakhir diperbarui pada
     readMore:
-        other: Baca lebih lanjut
+        other: Baca lebih lanjut >
 
 notFound:
     title:
@@ -39,6 +39,9 @@ widget:
     tagCloud:
         title:
             other: Tag-tag
+    categoriesCloud:
+        title:
+            other: Kategori
 
 search:
     title:
