Add Draft Article and Published Article Update
- Add "Cara menghemat Konsumsi Bandwidth Server" Article
- Article Update: Apa itu Cloudflare? Perlukah untuk menggunakan nya?
- Theme: Make Translatable `alt` attribute for Featured Image
- Theme: `a-file` Shortcode Improvement
- Theme: Simplify Twemoji Options
- i18n(id): Adding Article "Featured Image Of" String

--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -23,6 +23,8 @@ article:
         other: Terakhir diperbarui pada
     readMore:
         other: Baca lebih lanjut >
+    featuredImageOf:
+        other: Gambar Unggulan dari Pos
 
 notFound:
     title:
