Article and Taxonomies URL/Permalink Update
- Article: "Cara menghemat Konsumsi Bandwidth Server" update
- Adding Archetypes
- Content: Adding Index file for Categories and Tags Page List
- Changing Categories and Tags Page List URL
- i18n(id): Add Category Taxonomy String
- Theme: Implement a new i18n string in `layouts/_default/archives.html`
- Config: Changing Tags Permalink

--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -16,6 +16,9 @@ list:
         one: Subbagian
         other: Subbagian
 
+taxonomy:
+    categories: Kategori
+
 article:
     relatedContents:
         other: Konten terkait
