--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -20,6 +20,10 @@ taxonomy:
     categories: Kategori
 
 article:
+    back:
+        other: Kembali
+    tableOfContents:
+        other: Daftar Isi
     relatedContents:
         other: Konten terkait
     lastUpdatedOn:
