Article and i18n String Updates

--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -49,7 +49,7 @@ widget:
             other: Lebih
     tagCloud:
         title:
-            other: Tag-tag
+            other: Kumpulan Tag
     categoriesCloud:
         title:
             other: Kategori
