--- a/content/404.md
+++ b/content/404.md
@@ -1,18 +1,18 @@
 ---
-Title: 404 - Laman tidak ditemukan
+Title: 404 - Halaman tidak ditemukan
 url: 404.html
 comments: false
 drafts: false
 license: ""
 ---
 
-Mohon maaf, laman yang Anda akses itu tidak ditemukan. Penyebabnya bisa jadi karena:
+Mohon maaf, halaman yang Anda akses itu tidak ditemukan. Penyebabnya bisa jadi karena:
 
-1. Lamannya sudah dihapus
+1. Halamannya sudah dihapus
 2. Alamat URL nya telah diganti, tapi tidak/belum ada pengalihan
 3. Kesalahan pada penautan dari luar
 4. Alamat URL yang Anda ketik salah atau salah ketik
 5. Disengaja oleh Anda sendiri
 6. Atau, pada dasarnya Anda yang kurang ajar!
 
-Silahkan kunjungi laman yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari suatu laman atau artikel di blog ini. Terima kasih 🙂
+Silahkan kunjungi halaman/artikel yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari suatu materi yang ada di blog ini. Terima kasih 🙂
