Article, Page, and Theme Update
Plus:
- Main Theme Update to v3.12.0
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/releases/tag/v3.12.0

- Several `README.md` files and `CONTRIBUTING.md` file update

--- a/content/404.md
+++ b/content/404.md
@@ -6,13 +6,13 @@ drafts: false
 license: ""
 ---
 
-Mohon maaf, halaman yang Anda akses itu tidak ditemukan. Penyebabnya bisa jadi karena:
+Mohon maaf, halaman yang Anda akses tidak ditemukan. Penyebabnya bisa jadi karena:
 
 1. Halamannya sudah dihapus
 2. Alamat URL nya telah diganti, tapi tidak/belum ada pengalihan
-3. Kesalahan pada penautan dari luar
+3. Kesalahan penautan dari luar
 4. Alamat URL yang Anda ketik salah atau salah ketik
 5. Disengaja oleh Anda sendiri
 6. Atau, pada dasarnya Anda yang kurang ajar!
 
-Silahkan kunjungi halaman/artikel yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari suatu materi yang ada di blog ini. Terima kasih 🙂
+Silahkan kunjungi halaman/artikel yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari sesuatu di blog ini. Terima kasih 🙂
