Page and Article Updates

--- a/content/404.md
+++ b/content/404.md
@@ -15,4 +15,4 @@ Mohon maaf, halaman yang Anda akses tidak ditemukan. Penyebabnya bisa jadi karen
 5. Disengaja oleh Anda sendiri
 6. Atau, pada dasarnya Anda yang kurang ajar!
 
-Silahkan kunjungi halaman/artikel yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari sesuatu di blog ini. Terima kasih 🙂
+Silakan kunjungi halaman/artikel yang ada di [blog ini](/) atau gunakan fasilitas [Pencarian](/cari) jika Anda ingin mencari sesuatu di blog ini. Terima kasih 🙂
