--- a/content/404.md
+++ b/content/404.md
@@ -3,7 +3,9 @@ Title: 404 - Halaman tidak ditemukan
 url: 404.html
 comments: false
 drafts: false
-license: ""
+license: false
+readingTime: false
+robotsDisallow: true
 ---
 
 Mohon maaf, halaman yang Anda akses tidak ditemukan. Penyebabnya bisa jadi karena:
