Pages Edit + Change GitHub social link

--- a/content/404.md
+++ b/content/404.md
@@ -11,7 +11,7 @@ robotsDisallow: true
 Mohon maaf, halaman yang Anda akses tidak ditemukan. Penyebabnya bisa jadi karena:
 
 1. Halamannya sudah dihapus
-2. Alamat URL nya telah diganti, tapi tidak/belum ada pengalihan
+2. Alamat URL-nya telah diganti, tapi tidak/belum ada pengalihan
 3. Kesalahan penautan dari luar
 4. Alamat URL yang Anda ketik salah atau salah ketik
 5. Disengaja oleh Anda sendiri
